2009-02-20  David King  <davidk@openismus.com>

	* src/wswe.c (add_visit_action): Add to correct treestore,
	fixingadding of visits.

2009-02-20  David King  <davidk@openismus.com>

	* src/wswe.c (init_main_window): Don't connect to gtk_main_quit()
	in destroy signal handler, but to quit_file_action() instead.
	  (init_add_place_dialog): Connect to delete-event of dialog to
	prevent destruction of dialog on delete event emission. Thanks
	to Daniel.
	  (only_toplevel_visible): New function to show only toplevel
	rows in the add_visit_dialog combobox.
	  (add_place_delete_event): New callback function for delete-event
	of add_place_dialog.
	  (add_visit_action): Use a TreeModelFilter to only show the
	toplevel rows in the add_visit dialog.
	  (remove_visit_action): Make the callback only remove visits to
	eating places, not toplevel places.

2009-02-19  David King  <davidk@openismus.com>

	* src/wswe.c (init_main_window): Set editable property of
	name_column to TRUE.
	  (name_column_edited): New callback function to store an edited
	value to the name column.

2009-02-19  David King  <davidk@openismus.com>

	* src/wswe.c NAME_SORTID: New anonymous enum for column sort ids.
	  (init_main_window): Setup sortable Name column.
	  (sort_place_name): New function to compare two strings for sorting
	place names.

2009-02-18  David King  <davidk@openismus.com>

	* src/wswe.c (hide_add_place_dialog): Add function to hide the add
	a new eating place dialog.
	  (add_place_action): Set default response for the dialog so that
	after hiding, the default button is not lost.
	  (add_place_action_response): Replace hide calls with calls to
	hide_add_place_dialog().
	  (remove_place_action): Fix segfault, forgot to cast pointer to
	a GtkTreePath pointer.

2009-02-18  David King  <davidk@openismus.com>

	* src/wswe.c MainWindowData: Add add_place_dialog,
	add_place_dialog_combobox and add_place_dialog_entry widgets
	to typedef'd struct.